--- a/index.html
+++ b/index.html
@@ -2,12 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <!-- font-awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
+    <title>Skiongozi Team building</title>
+    <!-- customs css -->
+    <link rel="stylesheet" href="src/css/normalize.css">
+    <link rel="stylesheet" href="src/css/style.css">
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <!-- header -->
+<!-- header -->
+<header id="home">
+  <!-- navbar -->
+  <nav id="nav">
+    <div class="nav-center">
+      <!-- nav header -->
+      <div class="nav-header">
+        <img src="./logo.svg" alt="logo" class="logo">
+        <button class="nav-toggle">
+          <i class="fas fa-bars"></i>
+        </button>
+      </div>
+      <!-- links -->
+      <div class="links-container">
+        <ul class="links">
+          <li>
+            <a href="#home" class="scroll-link">home</a>
+          </li>
+          <li>
+            <a href="#about" class="scroll-link">about</a>
+          </li>
+          <li>
+            <a href="#services" class="scroll-link">services</a>
+          </li>
+          <li>
+            <a href="#tours" class="scroll-link">tours</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- banner -->
+  <div class="banner">
+    <div class="container">
+      <h1>Scroll project</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste minus veniam voluptas tenetur explicabo necessitatibus magni maxime earum quaerat quam.</p>
+      <a href="#tours" class="scroll-link btn btn-white">
+        explore tours
+      </a>
+    </div>
+  </div>
+</header>
+
+    <!-- custom app js -->
+    <script src="src/js/app.js"></script>
   </body>
 </html>
