Set up the mark up for desktop and mobile devices for the nav and hero section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="nav-center">
       <!-- nav header -->
       <div class="nav-header">
-        <img src="./logo.svg" alt="logo" class="logo">
+        <img src="./src/images/icons/logo.png" alt="logo" class="logo">
         <button class="nav-toggle">
           <i class="fas fa-bars"></i>
         </button>
@@ -35,25 +35,34 @@
             <a href="#home" class="scroll-link">home</a>
           </li>
           <li>
-            <a href="#about" class="scroll-link">about</a>
-          </li>
-          <li>
             <a href="#services" class="scroll-link">services</a>
           </li>
           <li>
-            <a href="#tours" class="scroll-link">tours</a>
+            <a href="#blog" class="scroll-link">blog</a>
+          </li>
+          <li>
+            <a href="#about" class="scroll-link">about us</a>
           </li>
         </ul>
+      </div>
+      <div class="contact-btn">
+        <a href="contact.html" class="scroll-link nav-btn btn">Contact</a>
       </div>
     </div>
   </nav>
   <!-- banner -->
   <div class="banner">
     <div class="container">
-      <h1>Scroll project</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste minus veniam voluptas tenetur explicabo necessitatibus magni maxime earum quaerat quam.</p>
-      <a href="#tours" class="scroll-link btn btn-white">
-        explore tours
+      <h3>
+        IGNITE ENGAGEMENT, FOSTER <br>
+        CONNECTIONS, AND SPARK INSPIRATION <br>
+        UNITING ONSITE & ONLINE
+      </h3>
+      <p>
+        Engage, connect, and be inspired! Discover our dynamic team building events, seamlessly blending in-person and virtual experiences. Strengthen your team's bond, ignite creativity, and achieve success together. Unleash your team's true potential with us!
+      </p>
+      <a href="#services" class="scroll-link btn hero-btn">
+        explore <i class="fas fa-chevron-right"></i>
       </a>
     </div>
   </div>
