--- a/index.html
+++ b/index.html
@@ -16,58 +16,89 @@
   </head>
   <body>
     <!-- header -->
-<!-- header -->
-<header id="home">
-  <!-- navbar -->
-  <nav id="nav">
-    <div class="nav-center">
-      <!-- nav header -->
-      <div class="nav-header">
-        <img src="./src/images/icons/logo.png" alt="logo" class="logo">
-        <button class="nav-toggle">
-          <i class="fas fa-bars"></i>
-        </button>
+    <header id="home">
+      <!-- navbar -->
+      <nav id="nav">
+        <div class="nav-center">
+          <!-- nav header -->
+          <div class="nav-header">
+            <img src="./src/images/icons/logo.png" alt="logo" class="logo">
+            <button class="nav-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <!-- links -->
+          <div class="links-container">
+            <ul class="links">
+              <li>
+                <a href="#home" class="scroll-link">home</a>
+              </li>
+              <li>
+                <a href="#services" class="scroll-link">services</a>
+              </li>
+              <li>
+                <a href="#blog" class="scroll-link">blog</a>
+              </li>
+              <li>
+                <a href="#about" class="scroll-link">about us</a>
+              </li>
+            </ul>
+            <div class="contact-btn">
+              <a href="contact.html" class="scroll-link nav-btn btn">Contact</a>
+            </div>
+          </div>
+          
+        </div>
+      </nav>
+      <!-- banner -->
+      <div class="banner">
+        <div class="container">
+          <h3>
+            IGNITE ENGAGEMENT, FOSTER <br>
+            CONNECTIONS, AND SPARK INSPIRATION <br>
+            UNITING ONSITE & ONLINE
+          </h3>
+          <p>
+            Engage, connect, and be inspired! Discover our dynamic team building events, seamlessly blending in-person and virtual experiences. Strengthen your team's bond, ignite creativity, and achieve success together. Unleash your team's true potential with us!
+          </p>
+          <a href="#services" class="scroll-link btn hero-btn">
+            explore <i class="fas fa-chevron-right"></i>
+          </a>
+        </div>
       </div>
-      <!-- links -->
-      <div class="links-container">
-        <ul class="links">
-          <li>
-            <a href="#home" class="scroll-link">home</a>
-          </li>
-          <li>
-            <a href="#services" class="scroll-link">services</a>
-          </li>
-          <li>
-            <a href="#blog" class="scroll-link">blog</a>
-          </li>
-          <li>
-            <a href="#about" class="scroll-link">about us</a>
-          </li>
-        </ul>
+    </header>
+    <!-- end of header -->
+    <!-- services -->
+    <section id="services" class="section">
+      <div class="title">
+        <h2>our<span> services</span></h2>
       </div>
-      <div class="contact-btn">
-        <a href="contact.html" class="scroll-link nav-btn btn">Contact</a>
-      </div>
-    </div>
-  </nav>
-  <!-- banner -->
-  <div class="banner">
-    <div class="container">
-      <h3>
-        IGNITE ENGAGEMENT, FOSTER <br>
-        CONNECTIONS, AND SPARK INSPIRATION <br>
-        UNITING ONSITE & ONLINE
-      </h3>
-      <p>
-        Engage, connect, and be inspired! Discover our dynamic team building events, seamlessly blending in-person and virtual experiences. Strengthen your team's bond, ignite creativity, and achieve success together. Unleash your team's true potential with us!
-      </p>
-      <a href="#services" class="scroll-link btn hero-btn">
-        explore <i class="fas fa-chevron-right"></i>
-      </a>
-    </div>
-  </div>
-</header>
+    </section>
 
+    <!-- about -->
+    <section id="about" class="section">
+      <div class="title">
+        <h2>About <span>Us</span></h2>
+      </div>
+    </section>
+
+    <!-- tours -->
+    <section id="blog" class="section">
+      <div class="title">
+        <h2>featured<span> tours</span></h2>
+      </div>
+    </section>
+    <!-- footer -->
+    <footer class="section">
+      <p>
+        copyright &copy; Steven Kiongozi team building <span id="date">2020</span>
+        .all rights reserved 
+      </p>
+    </footer>
+    <!-- back to top button -->
+    <a href="#nav" class="scroll-link top-link">
+      <i class="fas fa-arrow-up"></i>
+    </a>  
     <!-- custom app js -->
     <script src="src/js/app.js"></script>
   </body>
