Updated the mark up

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- tours -->
     <section id="blog" class="section">
       <div class="title">
-        <h2>featured<span> tours</span></h2>
+        <h2>Blog<span> </span></h2>
       </div>
     </section>
     <!-- footer -->
