Fixed a typo that lead to a bug

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </p>
     </footer>
     <!-- back to top button -->
-    <a href="#nav" class="scroll-link top-link">
+    <a href="#home" class="scroll-link top-link">
       <i class="fas fa-arrow-up"></i>
     </a>  
     <!-- custom app js -->
