--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </li>
             </ul>
             <div class="contact-btn">
-              <a href="contact.html" class="scroll-link nav-btn btn">Contact</a>
+              <a href="contact.html" class="nav-btn btn">Contact</a>
             </div>
           </div>
           
