Set up the mark up for the main services section

--- a/index.html
+++ b/index.html
@@ -64,14 +64,61 @@
           <a href="#services" class="scroll-link btn hero-btn">
             explore <i class="fas fa-chevron-right"></i>
           </a>
+          <!-- whatsapp -->
+          <div class="hero-section">
+            <!-- Your hero section content goes here -->
+            <a href="https://wa.me/0110033195" target="_blank">
+              <img src="./src/images/icons/whatsapp.png" alt="WhatsApp Chat">
+            </a>
+          </div>
+          <!-- end of whatsapp -->
         </div>
       </div>
     </header>
     <!-- end of header -->
-    <!-- services -->
+    <!-- main services -->
     <section id="services" class="section">
       <div class="title">
         <h2>our<span> services</span></h2>
+      </div>
+      <div class="section-center">
+        <h3 class="services-header">
+          Here is what we offer!
+        </h3>
+        <p class="services-sub-header">
+          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
+        </p>
+        <div class="services-btns">
+          <a href="#motivation" class="btn serve-btn">
+            motivational talks
+          </a>
+          <a href="#corporate" class="btn serve-btn">
+            corporate team building
+          </a>
+          <a href="#indoor" class="btn serve-btn">
+            indoor activities
+          </a>
+          <a href="#outdoor" class="btn serve-btn">
+            outdoor activities
+          </a>
+          <a href="#physical" class="btn serve-btn">
+            physical wellness training
+          </a>
+          <a href="#emotional" class="btn serve-btn">
+            emotional wellness training
+          </a>
+          <a href="#games" class="btn serve-btn">
+            games and ice breakers
+          </a>
+        </div>
+        <div class="services-banner"></div>
+      </div>
+    </section>
+
+    <!-- corporate team building -->
+    <section class="section" id="corporate">
+      <div class="section-center">
+        qwerty
       </div>
     </section>
 
