set up the blueprint markup for the different services

--- a/index.html
+++ b/index.html
@@ -118,7 +118,18 @@
     <!-- corporate team building -->
     <section class="section" id="corporate">
       <div class="section-center">
-        qwerty
+        <div class="services-content">
+          <div class="img-container">
+            <img src="./src/images/corporate_team-building.jpg" alt="">
+          </div>
+          <div class="services-info">
+            <h4 class="title">corporate team building</h4>
+            <p class="services-text">
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
+            </p>
+          </div>
+        </div>
+        
       </div>
     </section>
 
