Set up the mark up for the about us section

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           </div>
           <div class="img-container">
             <img src="./src/images/games.jpg" alt="">
-            
+
           </div>
         </div>
         
@@ -263,9 +263,16 @@
       <div class="title">
         <h2>About <span>Us</span></h2>
       </div>
+      <div class="section-center">
+        <div class="services-banner"></div>
+        <!-- about us text -->
+        <p class="about-info">
+          Engage, connect, and be inspired! Discover our dynamic team building events, seamlessly blending in-person and virtual experiences. Strengthen your team's bond, ignite creativity, and achieve success together. Unleash your team's true potential with us!
+        </p>
+      </div>
     </section>
 
-    <!-- tours -->
+    <!-- blog -->
     <section id="blog" class="section">
       <div class="title">
         <h2>Blog<span> </span></h2>
