Set up the contact form

--- a/index.html
+++ b/index.html
@@ -271,6 +271,33 @@
         </p>
       </div>
     </section>
+    <!-- contact us -->
+    <section id="contact" class="section">
+      <div class="section-center">
+        <h2>Contact us</h2>
+        <!-- conatc us banner -->
+        <div class="services-banner"></div>
+        <div class="contact-info">
+          <!-- contact form -->
+          <div class="contact-form card">
+            <form action="">
+              <div class="form-control">
+                <input type="text" name="name" placeholder="Your Name" required>
+              </div>
+              <div class="form-control">
+                <input type="email" name="email" placeholder="Your E-mail" required>
+              </div>
+              <div class="form-control">
+                <textarea name="message" rows="5" cols="30" placeholder="Message"></textarea>
+              </div>
+              <input type="submit" value="send" class="btn nav-btn">
+            </form>
+          </div>
+          <!-- end of contact form -->
+          <!-- textual contatc info -->
+        </div>
+      </div>
+    </section>
 
     <!-- blog -->
     <section id="blog" class="section">
