Set up the contact info

--- a/index.html
+++ b/index.html
@@ -277,10 +277,11 @@
         <h2>Contact us</h2>
         <!-- conatc us banner -->
         <div class="services-banner"></div>
-        <div class="contact-info">
+          <div class="contact-info">
           <!-- contact form -->
-          <div class="contact-form card">
-            <form action="">
+          <div class="contact-form">
+            <h3>WE'RE READY, TALK TO US</h3>
+            <form action="" class="card">
               <div class="form-control">
                 <input type="text" name="name" placeholder="Your Name" required>
               </div>
@@ -294,7 +295,24 @@
             </form>
           </div>
           <!-- end of contact form -->
-          <!-- textual contatc info -->
+          <!-- more contact info -->
+          <div class="contacts">
+            <h3>CONTACT INFO</h3>
+            <div class="single-contact">
+              <h4>Email</h4>
+              <p>@1234@gmail.com</p>
+            </div>
+            <div class="single-contact">
+              <h4>Call Us</h4>
+              <p>@1234@gmail.com</p>
+            </div>
+            <div class="single-contact">
+              <h4>folow us</h4>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-facebook"></i>
+            </div>
+          </div>
+          <!-- end ofmore contact info -->
         </div>
       </div>
     </section>
