Fixed the position of the WhatsApp button

--- a/index.html
+++ b/index.html
@@ -61,17 +61,20 @@
           <p>
             Engage, connect, and be inspired! Discover our dynamic team building events, seamlessly blending in-person and virtual experiences. Strengthen your team's bond, ignite creativity, and achieve success together. Unleash your team's true potential with us!
           </p>
-          <a href="#services" class="scroll-link btn hero-btn">
-            explore <i class="fas fa-chevron-right"></i>
-          </a>
-          <!-- whatsapp -->
-          <div class="hero-section">
-            <!-- Your hero section content goes here -->
-            <a href="https://wa.me/0110033195" target="_blank">
-              <img src="./src/images/icons/whatsapp.png" alt="WhatsApp Chat">
+
+          <div class="btn-container">
+            <a href="#services" class="scroll-link btn hero-btn">
+              explore <i class="fas fa-chevron-right"></i>
             </a>
+            <!-- whatsapp -->
+            <div class="hero-section">
+              <!-- Your hero section content goes here -->
+              <a href="https://wa.me/0110033195" target="_blank">
+                <img src="./src/images/icons/whatsapp.png" alt="WhatsApp Chat">
+              </a>
+            </div>
+            <!-- end of whatsapp -->
           </div>
-          <!-- end of whatsapp -->
         </div>
       </div>
     </header>
