Finished setting up the static mark up for the blog

--- a/index.html
+++ b/index.html
@@ -325,6 +325,49 @@
       <div class="title">
         <h2>Blog<span> </span></h2>
       </div>
+      <div class="section-center">
+        <div class="blog-container">
+          <!-- single blog -->
+          <div class="single-blog">
+            <div class="img-container">
+              <img src="./src/images/blog-4.png" alt="blog">
+            </div>
+            <div class="blog-title">
+              <h4 class="title">Dolor simit</h4>
+              <p class="blog-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint soluta eveniet molestias, numquam nam sed!
+              </p>
+            </div>
+          </div>
+          <!-- end of single blog -->
+          <!-- single blog -->
+          <div class="single-blog">
+            <div class="img-container">
+              <img src="./src/images/blog-2.jpg" alt="blog">
+            </div>
+            <div class="blog-title">
+              <h4 class="title">Dolor simit</h4>
+              <p class="blog-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint soluta eveniet molestias, numquam nam sed!
+              </p>
+            </div>
+          </div>
+          <!-- end of single blog -->
+          <!-- single blog -->
+          <div class="single-blog">
+            <div class="img-container">
+              <img src="./src/images/blog-3.jpg" alt="blog">
+            </div>
+            <div class="blog-title">
+              <h4 class="title">Dolor simit</h4>
+              <p class="blog-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint soluta eveniet molestias, numquam nam sed!
+              </p>
+            </div>
+          </div>
+          <!-- end of single blog -->
+        </div>
+      </div>
     </section>
     <!-- footer -->
     <footer class="section">
