Removed unused static code after dynamic render

--- a/index.html
+++ b/index.html
@@ -327,45 +327,7 @@
       </div>
       <div class="section-center">
         <div class="blog-container">
-          <!-- single blog -->
-          <div class="single-blog">
-            <div class="img-container">
-              <img src="./src/images/blog-4.png" alt="blog">
-            </div>
-            <div class="blog-title">
-              <h4 class="title">Dolor simit</h4>
-              <p class="blog-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint soluta eveniet molestias, numquam nam sed!
-              </p>
-            </div>
-          </div>
-          <!-- end of single blog -->
-          <!-- single blog -->
-          <div class="single-blog">
-            <div class="img-container">
-              <img src="./src/images/blog-2.jpg" alt="blog">
-            </div>
-            <div class="blog-title">
-              <h4 class="title">Dolor simit</h4>
-              <p class="blog-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint soluta eveniet molestias, numquam nam sed!
-              </p>
-            </div>
-          </div>
-          <!-- end of single blog -->
-          <!-- single blog -->
-          <div class="single-blog">
-            <div class="img-container">
-              <img src="./src/images/blog-3.jpg" alt="blog">
-            </div>
-            <div class="blog-title">
-              <h4 class="title">Dolor simit</h4>
-              <p class="blog-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint soluta eveniet molestias, numquam nam sed!
-              </p>
-            </div>
-          </div>
-          <!-- end of single blog -->
+          <!-- Render blog items here -->
         </div>
       </div>
     </section>
@@ -381,6 +343,7 @@
       <i class="fas fa-arrow-up"></i>
     </a>  
     <!-- custom app js -->
+    <script src="src/js/blog.js"></script>
     <script src="src/js/app.js"></script>
   </body>
 </html>
