--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- whatsapp -->
             <div class="hero-section">
               <!-- Your hero section content goes here -->
-              <a href="https://wa.me/254110033195" target="_blank">
+              <a href="https://wa.me/254789869379" target="_blank">
                 <img src="./src/images/icons/whatsapp.png" alt="WhatsApp Chat">
               </a>
             </div>
@@ -311,8 +311,12 @@
             </div>
             <div class="single-contact">
               <h4>folow us</h4>
-              <i class="fab fa-instagram"></i>
-              <i class="fab fa-facebook"></i>
+              <a href="https://www.facebook.com/steve.irungu.33">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="https://www.facebook.com/steve.irungu.33">
+                <i class="fab fa-facebook"></i>
+              </a>
             </div>
           </div>
           <!-- end ofmore contact info -->
