Updated the contact info

--- a/index.html
+++ b/index.html
@@ -303,15 +303,15 @@
             <h3>CONTACT INFO</h3>
             <div class="single-contact">
               <h4>Email</h4>
-              <p>@1234@gmail.com</p>
+              <p>irungusteve132@gmail.com</p>
             </div>
             <div class="single-contact">
               <h4>Call Us</h4>
-              <p>@1234@gmail.com</p>
+              <p>0768218914</p>
             </div>
             <div class="single-contact">
               <h4>folow us</h4>
-              <a href="https://www.facebook.com/steve.irungu.33">
+              <a href="https://www.instagram.com/skiongozi_team_building/">
                 <i class="fab fa-instagram"></i>
               </a>
               <a href="https://www.facebook.com/steve.irungu.33">
